/*
 * This file was generated by the Gradle 'init' task.
 */
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://oss.sonatype.org/content/repositories/snapshots')
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'com.jayway.jsonpath:json-path:2.1.0'
    testImplementation 'org.mockito:mockito-core:3.12.4'
}

subprojects {
    tasks.withType(Javadoc).all { enabled = false }
}

group = 'org.json'
version = '20231013'
description = 'JSON in Java'

configurations.all {
}

java {
    withSourcesJar()
    withJavadocJar()

    // Apply a specific Java toolchain to ease 
    //working on different environments.
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
